# Makefiles

./: .gitignore  .mrpackmod_gccrc  .mrpackmod_horizonrc  .mrpackmod_intelrc  .mrpackmod_vistarc  .mrpackmodrc  Makefile  README.md  all_compilers_install.sh  aspect_frontera_classic22.sh  aspect_frontera_oneapi.sh  batch_install.sh  build_all.sh  build_ladder.sh  delft.sh  env_classic22.sh  env_frontera_classic18.sh  env_frontera_classic19.sh  env_frontera_classic22.sh  env_frontera_classic23.sh  env_frontera_gcc12.sh  env_frontera_gcc13.sh  env_frontera_gcc9.sh  env_frontera_intel19.sh  env_frontera_intel22.sh  env_frontera_intel23.sh  env_frontera_intel24.sh  env_frontera_intel25.sh  env_frontera_oneapi.sh  env_frontera_oneapi24.sh  env_ls6_classic19.sh  env_ls6_classic22.sh  env_ls6_gcc11.sh  env_ls6_gcc12.sh  env_ls6_gcc13.sh  env_ls6_gcc9.sh  env_ls6_intel19.sh  env_ls6_intel22.sh  env_ls6_intel23.sh  env_ls6_intel24.sh  (+44 more)
a1example/: Makefile
adaptivecpp/: Makefile
adios2/: Configuration  Configuration.cpu  Configuration.cuda  Makefile
all_packages/: Configuration  Makefile  all_build.sh  all_ladder.sh  build_ladder.sh  exceptions.txt  install_ladder.sh  utils.py
alps/: Makefile
arpack/: Configuration  Configuration.common  Configuration.par  Configuration.seq  Makefile
aspect/: Configuration  Makefile  aspect_frontera_classic22.sh  aspect_frontera_classic23.sh  aspect_frontera_oneapi.sh  aspect_ladder.sh  aspect_ls6_classic22.sh  aspect_stampede2_classic22.sh  aspect_submit.slurm  install.sh
athenapk/: Makefile  (+3 more)
utils/find_targets/: CMakeLists.txt
(+402 files in other folders)
